@@ -4,7 +4,8 @@ Version 1.5.1 [WIP]
 BUGS
 * Fixed a bug in which punycode TLDs were excluded from TLD extraction (thanks to
   Alex Pinto for pointing that out) #51
-  
+* param_get now returns NAs for missing values, rather than empty strings (thanks to Josh Izzard for the report) #49
+
 DEVELOPMENT
 * Removed the non-portable -g compiler flag in response to CRAN feedback.
 
